--- a/portfolio.css
+++ b/portfolio.css
@@ -1,6 +1,7 @@
 body {
     font-size: 8%;
     font-family: 'PT Sans', 'sans-serif';
+    background-color: rgb(21, 23, 39);
 }
 
 h2 {
@@ -47,7 +48,7 @@ header ul {
 
 header h2 {
     width: 25%;
-    color: rgb(255, 142, 251);
+    color: rgb(224, 176, 222);
     /* background-color: blue; */
 }
 
@@ -57,7 +58,7 @@ figure img {
 
 footer {
     background-color: rgb(15, 17, 34);
-    color: rgb(255, 142, 251);
+    color: rgb(224, 176, 222);
     height: 100px;
     font-size: 16em;
     text-align: center;
@@ -106,7 +107,7 @@ footer {
 }
 
 .content a:hover {
-    color: rgb(255, 142, 251); 
+    color: rgb(224, 176, 222); 
 }
 
 .content h3 {
@@ -131,4 +132,105 @@ footer {
     /* justify-content: center; */
     /* justify-items: center; */
     /* align-items: flex-start; */
+}
+
+.div {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+}
+
+.image-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* background-color: rgb(21, 23, 39);
+    background-color: rgb(191, 0, 213); */
+    background-color: rgb(191, 0, 213);
+    width: 70%;
+    height: 70%;
+    margin-top: 220px;
+  }
+  
+  .image-single-title {
+    /* width: 230px;
+    height: 230px;  */
+    width: 100%;
+    height: 100%;
+    background-color: rgb(21, 23, 39);
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    padding-top: 12px;
+    /* margin: 10px 20px; */
+    
+  }
+  
+  .image-content-container {
+    /* width: 200px;
+    height: 200px; */
+    /* background-color: rgb(21, 23, 39); */
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    border-radius: 2px;
+    margin: 0px 70px;
+    overflow: hidden;
+    box-sizing: content-box;
+  }
+  
+  .image-1 {
+    width: 400px;
+    height: 400px;
+    border-radius: 1px;
+  }
+  
+  .caption {
+    /* width: 200px;
+    height: 200px; */
+    /* width: 100%;
+    height: 100%; */
+    width: 400px;
+    height: 400px;
+    border-radius: 1px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.568);
+    font-size: 20px;
+    transition: top 0.6s;
+    position: relative;
+    top: 400px;
+    right: 0px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+  
+  .image-single-title:hover .caption {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    /* top: -202.5px; */
+    right: 0px;
+    top: -402.5px;
+    text-align: center;
+  }
+
+#rdBtn {
+    margin: 20px 0px 20px 0px;
+    width: 120px;
+    height: 25px;
+    background-color: rgb(255, 255, 255);
+  }
+
+#rdBtn:hover {
+    background-color: rgb(15, 17, 34);
+    color: rgb(255, 214, 142);
+    transition: background-color 300ms ease-in; 
+}
+
+#more {
+    display: none;
 }
