--- a/portfolio.css
+++ b/portfolio.css
@@ -4,6 +4,14 @@ body {
     background-color: rgb(21, 23, 39);
 }
 
+.work-title {
+    font-size: 23em;
+    width: 100%;
+    text-align: center;
+    color: rgb(255, 214, 142);
+    margin-bottom: 0px;
+}
+
 h2 {
     font-size: 23em;
 }
@@ -139,6 +147,7 @@ footer {
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
+    margin-bottom: 250px;
     justify-content: center;
 }
 
@@ -151,14 +160,14 @@ footer {
     background-color: rgb(191, 0, 213);
     width: 70%;
     height: 70%;
-    margin-top: 220px;
+    margin-top: 120px;
   }
   
   .image-single-title {
     /* width: 230px;
     height: 230px;  */
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     background-color: rgb(21, 23, 39);
     display: flex;
     justify-content: space-around;
@@ -173,7 +182,8 @@ footer {
     height: 200px; */
     /* background-color: rgb(21, 23, 39); */
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    height: 400px;
     padding: 0px;
     border-radius: 2px;
     margin: 0px 70px;
@@ -222,12 +232,14 @@ footer {
     margin: 20px 0px 20px 0px;
     width: 120px;
     height: 25px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(224, 176, 222);
+    border: 2px rgb(15, 17, 34) solid;
   }
 
 #rdBtn:hover {
     background-color: rgb(15, 17, 34);
     color: rgb(255, 214, 142);
+    border-color: rgb(21, 21, 21)5, 17, 34);
     transition: background-color 300ms ease-in; 
 }
 
